5-deploy-echo4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo4
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo1
      version: v2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo1
        version: v2
    spec:
      containers:
      - env:
        - name: TEXT
          value: echo4
        - name: NEXT
          value: echo2:8080
        image: rg.fr-par.scw.cloud/ilkilabs/web-echo:v1
        name: world
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
