11-VirtualServiceEcho250-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo2
  namespace: demo
spec:
  hosts:
  - echo2
#  gateways:
#  - demo-gateway
  http:
  - route:
    - destination:
        host: echo2
        subset: version-v2
      weight: 10
    - destination:
        host: echo2
        subset: version-v1
      weight: 90
