12-VirtualServiceEcho2fromEcho1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo2
  namespace: demo
spec:
  hosts:
  - echo2
#  gateways:
#  - demo-gateway
  http:
  - match:
    - sourceLabels:
        app: echo1
        version: v2
    route:
    - destination:
        host: echo2
        subset: version-v2
      weight: 80
    - destination:
        host: echo2
        subset: version-v1
      weight: 20
  - route:
    - destination:
        host: echo2
        subset: version-v1
