2-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-echo1
  namespace: demo
spec:
  hosts:
  - "demo.getlink.io"
  gateways:
  - demo-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: echo1
