7-VirtualServiceEcho1toV1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo1
  namespace: demo
spec:
  hosts:
  - "demo.getlink.io"
  gateways:
  - demo-gateway
  http:
    - route:
      - destination:
          host: echo1
          subset: version-v1
