8-VirtualServiceEcho1ABtesting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo1
  namespace: demo
spec:
  hosts:
  - "demo.getlink.io"
  gateways:
  - demo-gateway
  http:
  - match:
    - headers:
        x-demo-feature:
          exact: "beta"
    route:
    - destination:
        host: echo1
        subset: version-v2
  - route:
    - destination:
        host: echo1
        subset: version-v1
