14-Allow-Get-To-Echo1.yaml
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: getecho1
  namespace: demo
spec:
  selector:
    matchLabels:
      app: echo1
  rules:
  - to:
    - operation:
        methods: ["GET"]
